--- a/env.example
+++ b/env.example
@@ -13,13 +13,20 @@ PAYMOB_PUBLIC_KEY=
 PAYMOB_CARD_METHOD_ID=
 PAYMOB_HMAC_SECRET=
 
-# DeepSeek API Key
-DEEPSEEK_API_KEY=your_deepseek_api_key_here
-# (Optional) DeepSeek model names
-DEEPSEEK_CODING_MODEL=deepseek-coding
-DEEPSEEK_CHAT_MODEL=deepseek-chat
+# OpenAI API Key
+OPENAI_API_KEY=your_openai_api_key_here
+# (Optional) OpenAI model names
+OPENAI_QUERY_MODEL=gpt-4o
+OPENAI_ANALYSIS_MODEL=gpt-4.1-mini
+OPENAI_EMBEDDING_MODEL=text-embedding-3-small
 
-# HuggingFace Inference API Key
-HF_API_KEY=your_huggingface_api_key_here
+# Remove DeepSeek API Key
+# DEEPSEEK_API_KEY=your_deepseek_api_key_here
+# (Optional) DeepSeek model names
+# DEEPSEEK_CODING_MODEL=deepseek-coding
+# DEEPSEEK_CHAT_MODEL=deepseek-chat
+
+# Remove HuggingFace Inference API Key
+# HF_API_KEY=your_huggingface_api_key_here
 # (Optional) HuggingFace embedding model
-HF_EMBEDDING_MODEL=sentence-transformers/all-MiniLM-L6-v2
+# HF_EMBEDDING_MODEL=sentence-transformers/all-MiniLM-L6-v2
